--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "eth-account-hub",
+  "name": "vue-tailwind-ethereum-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.2.0",
+    "@heroicons/vue": "^1.0.1",
     "core-js": "^3.6.5",
+    "tailwindcss": "^2.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -19,21 +22,23 @@
     "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.0-alpha.5",
+    "@vue/cli-plugin-e2e-cypress": "^5.0.0-alpha.5",
+    "@vue/cli-plugin-eslint": "^5.0.0-alpha.5",
+    "@vue/cli-plugin-router": "^5.0.0-alpha.5",
+    "@vue/cli-plugin-typescript": "^5.0.0-alpha.5",
+    "@vue/cli-plugin-unit-mocha": "^5.0.0-alpha.5",
+    "@vue/cli-service": "^5.0.0-alpha.5",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "autoprefixer": "^10.2.6",
     "chai": "^4.1.2",
-    "eslint": "^6.7.2",
+    "eslint": "^7.27.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "postcss": "^8.3.0",
     "prettier": "^2.2.1",
     "typescript": "~4.1.5"
   }
