--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,js,ts}\""
   },
   "dependencies": {
     "@headlessui/vue": "^1.2.0",
