--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@headlessui/vue": "^1.2.0",
     "@heroicons/vue": "^1.0.1",
+    "bnc-onboard": "^1.26.1",
     "core-js": "^3.6.5",
+    "ethers": "^5.2.0",
     "tailwindcss": "^2.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
