--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "dependencies": {
     "@headlessui/vue": "^1.2.0",
     "@heroicons/vue": "^1.0.1",
+    "assert": "^2.0.0",
     "bnc-onboard": "^1.26.1",
     "core-js": "^3.6.5",
-    "ethers": "^5.2.0",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.3.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^2.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
