--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.3.0",
     "https-browserify": "^1.0.0",
+    "nightwind": "^1.1.11",
     "os-browserify": "^0.3.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
