--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
+    "lint": "eslint --ext .ts,.js,.vue",
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,js,ts}\""
   },
   "dependencies": {
@@ -15,9 +16,8 @@
     "@heroicons/vue": "^1.0.1",
     "assert": "^2.0.0",
     "bnc-onboard": "^1.26.1",
-    "core-js": "^3.6.5",
     "crypto-browserify": "^3.12.0",
-    "ethers": "^5.3.0",
+    "ethers": "^5.3.1",
     "https-browserify": "^1.0.0",
     "nightwind": "^1.1.11",
     "os-browserify": "^0.3.0",
@@ -32,13 +32,12 @@
     "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "^5.0.0-alpha.5",
+    "@vitejs/plugin-vue": "^1.2.3",
     "@vue/cli-plugin-e2e-cypress": "^5.0.0-alpha.5",
     "@vue/cli-plugin-eslint": "^5.0.0-alpha.5",
     "@vue/cli-plugin-router": "^5.0.0-alpha.5",
     "@vue/cli-plugin-typescript": "^5.0.0-alpha.5",
     "@vue/cli-plugin-unit-mocha": "^5.0.0-alpha.5",
-    "@vue/cli-service": "^5.0.0-alpha.5",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
@@ -50,6 +49,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^8.3.0",
     "prettier": "^2.2.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vite": "^2.3.7",
+    "vue-tsc": "^0.1.7"
   }
 }
