--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "vite preview",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "eslint --ext .ts,.js,.vue",
+    "lint": "eslint --ext .ts,.js,.vue .",
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,js,ts}\""
   },
   "dependencies": {
